--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
     "prisma": "^4.11.0",
     "tsup": "^6.6.3",
@@ -23,7 +25,8 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
-    "fastify": "^4.14.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "zod": "^3.21.0"
   }
 }
